--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,20 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
+# Explicitly declare text files we want to always be normalized and converted 
+# to native line endings on checkout.
+*.c text
+*.h text
+
+# Declare files that will always have CRLF line endings on checkout.
+*.sln text eol=crlf
+*.vcxproj text eol=crlf
+*.vcxproj.filters eol=crlf
+
+# Denote all files that are truly binary and should not be modified.
+*.png binary
+*.exe binary
+
 # Custom for Visual Studio
 *.cs     diff=csharp
 
